# haskhol-math

./: HaskHOL-Math.cabal  README.md
cbits/: adcClauses.c  adcFlags.c  addClauses.c  addFlags.c
include/: constants.h
src/HaskHOL/: Math.hs
src/HaskHOL/Lib/: Arith.hs  CalcNum.hs  Grobner.hs  IndTypes.hs  IndTypesPre.hs  Lists.hs  Normalizer.hs  Nums.hs  Pair.hs  Recursion.hs  WF.hs
src/HaskHOL/Lib/Arith/: A.hs  Base.hs  Context.hs  PQ.hs
src/HaskHOL/Lib/Arith/A/: Base.hs  Context.hs
src/HaskHOL/Lib/CalcNum/: Pre.hs  Pre2.hs
src/HaskHOL/Lib/IndTypes/: A.hs  B.hs  Base.hs  Context.hs  PQ.hs  Pre.hs  Pre2.hs
src/HaskHOL/Lib/IndTypes/A/: Base.hs  Context.hs  Pre.hs
src/HaskHOL/Lib/IndTypes/B/: Base.hs  Context.hs  Pre.hs
src/HaskHOL/Lib/IndTypesPre/: Base.hs  Context.hs  PQ.hs
src/HaskHOL/Lib/Lists/: A.hs  Base.hs  Context.hs  PQ.hs
src/HaskHOL/Lib/Lists/A/: Base.hs  Context.hs
src/HaskHOL/Lib/Nums/: A.hs  B.hs  Base.hs  Context.hs  PQ.hs
src/HaskHOL/Lib/Nums/A/: Base.hs  Context.hs
src/HaskHOL/Lib/Nums/B/: Base.hs  Context.hs
src/HaskHOL/Lib/Pair/: A.hs  B.hs  Base.hs  C.hs  Context.hs  PQ.hs
src/HaskHOL/Lib/Pair/A/: Base.hs  Context.hs
src/HaskHOL/Lib/Pair/B/: Base.hs  Context.hs
src/HaskHOL/Lib/Pair/C/: Base.hs  Context.hs
src/HaskHOL/Lib/WF/: Base.hs  Context.hs  PQ.hs
