name:          haskhol-math
version:       0.1.0
synopsis:      HaskHOL libraries for mathematical and structural reasoning.
description:   More details can be found at the following page:  
               http://haskhol.org. 
license:       BSD3
license-file:  LICENSE
author:        Evan Austin <ecaustin@ittc.ku.edu>
maintainer:    Evan Austin <ecaustin@ittc.ku.edu>
category:      Theorem Provers
cabal-version: >=1.18
build-type:    Simple
stability:     experimental
homepage:      http://haskhol.org

library
    default-language:  Haskell2010
    default-extensions: ConstraintKinds, DeriveDataTypeable, OverloadedStrings,
                        QuasiQuotes, TemplateHaskell, TypeFamilies
    build-depends:   base >=4.7
                   , template-haskell >=2.9
                   , parsec >=3.1
                   , vector >= 0.10
                   , haskhol-core >=1.2
                   , haskhol-deductive >=0.2
                   , text >= 1.2

    exposed-modules:
      HaskHOL.Math
      HaskHOL.Lib.Pair
      HaskHOL.Lib.Nums
      HaskHOL.Lib.Recursion
      HaskHOL.Lib.Arith
      HaskHOL.Lib.WF
      HaskHOL.Lib.CalcNum
      HaskHOL.Lib.Normalizer
      HaskHOL.Lib.Grobner
      HaskHOL.Lib.IndTypes
      HaskHOL.Lib.Lists
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules:
      HaskHOL.Lib.Pair.A
      HaskHOL.Lib.Pair.A.Base
      HaskHOL.Lib.Pair.A.Context
      HaskHOL.Lib.Pair.B
      HaskHOL.Lib.Pair.B.Base
      HaskHOL.Lib.Pair.B.Context
      HaskHOL.Lib.Pair.C
      HaskHOL.Lib.Pair.C.Base
      HaskHOL.Lib.Pair.C.Context
      HaskHOL.Lib.Pair.Base
      HaskHOL.Lib.Pair.Context
      HaskHOL.Lib.Nums.A
      HaskHOL.Lib.Nums.A.Base
      HaskHOL.Lib.Nums.A.Context
      HaskHOL.Lib.Nums.B
      HaskHOL.Lib.Nums.B.Base
      HaskHOL.Lib.Nums.B.Context
      HaskHOL.Lib.Nums.Base
      HaskHOL.Lib.Nums.Context
      HaskHOL.Lib.Arith.A
      HaskHOL.Lib.Arith.A.Base
      HaskHOL.Lib.Arith.A.Context
      HaskHOL.Lib.Arith.Base
      HaskHOL.Lib.Arith.Context
      HaskHOL.Lib.WF.Base
      HaskHOL.Lib.WF.Context
      HaskHOL.Lib.CalcNum.Pre
      HaskHOL.Lib.CalcNum.Pre2
      HaskHOL.Lib.IndTypes.A
      HaskHOL.Lib.IndTypes.A.Base
      HaskHOL.Lib.IndTypes.A.Context
      HaskHOL.Lib.IndTypes.A.Pre
      HaskHOL.Lib.IndTypes.B
      HaskHOL.Lib.IndTypes.B.Base
      HaskHOL.Lib.IndTypes.B.Context
      HaskHOL.Lib.IndTypes.B.Pre
      HaskHOL.Lib.IndTypes.Base
      HaskHOL.Lib.IndTypes.Context
      HaskHOL.Lib.IndTypes.Pre
      HaskHOL.Lib.Lists.A
      HaskHOL.Lib.Lists.A.Base
      HaskHOL.Lib.Lists.A.Context
      HaskHOL.Lib.Lists.Base
      HaskHOL.Lib.Lists.Context
             
    ghc-prof-options: -prof -fprof-auto
    ghc-options: -Wall -fcontext-stack=200
 
