name:          haskhol-math
version:       0.1.0
synopsis:      HaskHOL libraries for mathematical and structural reasoning.
description:   More details can be found at the following page:  
               http://haskhol.org. 
license:       BSD3
license-file:  LICENSE
author:        Evan Austin <ecaustin@ittc.ku.edu>
maintainer:    Evan Austin <ecaustin@ittc.ku.edu>
category:      Theorem Provers
cabal-version: >=1.18
build-type:    Simple
stability:     experimental
homepage:      http://haskhol.org

library
    default-language:  Haskell2010
    default-extensions: ConstraintKinds, DeriveDataTypeable, FlexibleContexts,
                        OverloadedStrings, PatternSynonyms, QuasiQuotes, 
                        TemplateHaskell, TypeFamilies
    build-depends:   base >=4.7
                   , template-haskell >=2.9
                   , parsec >=3.1
                   , vector >= 0.10
                   , haskhol-core >=1.2
                   , haskhol-deductive >=0.2
                   , text >= 1.2

    exposed-modules:
      HaskHOL.Math
      HaskHOL.Lib.Pair
      HaskHOL.Lib.Nums
      HaskHOL.Lib.Recursion
      HaskHOL.Lib.Arith
      HaskHOL.Lib.WF
      HaskHOL.Lib.CalcNum
      HaskHOL.Lib.Normalizer
      HaskHOL.Lib.Grobner
      HaskHOL.Lib.IndTypesPre
      HaskHOL.Lib.IndTypes
      -- HaskHOL.Lib.Lists
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules:
      HaskHOL.Lib.Pair.Base
      HaskHOL.Lib.Pair.Context
      HaskHOL.Lib.Pair.PQ
      HaskHOL.Lib.Pair.Base
      HaskHOL.Lib.Nums.Base
      HaskHOL.Lib.Nums.Context
      HaskHOL.Lib.Nums.PQ
      HaskHOL.Lib.Arith.Base
      HaskHOL.Lib.Arith.Context
      HaskHOL.Lib.Arith.PQ
      HaskHOL.Lib.WF.Context
      HaskHOL.Lib.WF.PQ
      HaskHOL.Lib.CalcNum.Pre
      HaskHOL.Lib.CalcNum.Pre2
      HaskHOL.Lib.IndTypesPre.Base
      HaskHOL.Lib.IndTypesPre.Context
      HaskHOL.Lib.IndTypesPre.PQ
      HaskHOL.Lib.IndTypes.Base
      HaskHOL.Lib.IndTypes.Context
      HaskHOL.Lib.IndTypes.Pre
      HaskHOL.Lib.IndTypes.Pre2
      HaskHOL.Lib.IndTypes.PQ
      -- HaskHOL.Lib.Lists.Base
      -- HaskHOL.Lib.Lists.Context
      -- HaskHOL.Lib.Lists.PQ
             
    ghc-prof-options: -O2 -funbox-strict-fields -fcontext-stack=200 -Wall 
                      -fprof-cafs -fprof-auto -rtsopts
    ghc-options: -O2 -funbox-strict-fields -fcontext-stack=200 -Wall
 
